--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             your purchase date, condition, or reading status.</p>
                     </div>
                     <div class="image-container">
-                        <img src="images/featureHome.png" alt="">
+                        <img src="images/featureManageBooks.png" alt="">
                     </div>
                 </div>
             </div>
