--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <!-- title -->
         <div class="container poster">
-            <div class="title">
+            <div class="title" id="title">
                 <div class="image-container">
                     <img src="images/Title_image.png" class="img-fluid" alt="">
                 </div>
@@ -85,14 +85,14 @@
                         <div class="btn">
                             <a href="https://apps.apple.com/de/app/adopt-a-book/id1638142022?l=en" class="app-store"
                                 target="_blank">
-                                <img src="https://adoptabook.app/image/l3/app-store.png" alt="">
+                                <img src="images/app-store.png" alt="">
                             </a>
                         </div>
 
                         <div class="btn">
                             <a href="https://play.google.com/store/apps/details?id=com.hexmatter.adoptabook"
                                 class="play-store" target="_blank">
-                                <img src="https://adoptabook.app/image/l3/google-play.png" alt="">
+                                <img src="images/google-play.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -304,14 +304,14 @@
                         <div class="btn">
                             <a href="https://apps.apple.com/de/app/adopt-a-book/id1638142022?l=en" class="app-store"
                                 target="_blank">
-                                <img src="https://adoptabook.app/image/l3/app-store.png" alt="">
+                                <img src="images/app-store.png" alt="">
                             </a>
                         </div>
 
                         <div class="btn">
                             <a href="https://play.google.com/store/apps/details?id=com.hexmatter.adoptabook"
                                 class="play-store" target="_blank">
-                                <img src="https://adoptabook.app/image/l3/google-play.png" alt="">
+                                <img src="images/google-play.png" alt="">
                             </a>
                         </div>
                     </div>
